--- a/package.json
+++ b/package.json
@@ -2,39 +2,30 @@
 	"name": "svelte-3d",
 	"version": "0.0.1",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"@tweakpane/core": "^1.1.0",
-		"@types/three": "^0.144.0",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.6",
-		"tslib": "^2.3.1",
-		"tweakpane": "^3.1.0",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
 	},
-	"type": "module",
 	"dependencies": {
-		"@threlte/core": "^4.3.2",
-		"@threlte/extras": "^4.4.1",
-		"three": "^0.145.0"
+		"@threlte/core": "^6.0.3",
+		"@threlte/extras": "^5.1.0",
+		"@tweakpane/core": "^2.0.0",
+		"@types/three": "^0.155.0",
+		"postprocessing": "^6.32.2",
+		"three": "^0.155.0",
+		"tweakpane": "^4.0.0"
 	}
 }
